// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foldable should be folded by default 1`] = `
<Themed(styled.div)>
  <Summary
    folded={true}
    key=".0"
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    folded={true}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</Themed(styled.div)>
`;

exports[`Foldable toggleFold should change folded state 1`] = `
<Themed(styled.div)>
  <Summary
    folded={false}
    key=".0"
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    folded={false}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</Themed(styled.div)>
`;
